# Mdbx

./: .gitignore  CLIENT_INTEGRATION_GUIDE.md  CLIENT_INTEGRATION_GUIDE.zh-CN.md  CONTEXT.md  Cargo.toml  LICENSE  README.en.md  README.md  README.zh-CN.md
android/: README.md  README.zh-CN.md
crates/mdbx-cli/: Cargo.toml
crates/mdbx-cli/src/: main.rs
crates/mdbx-core/: Cargo.toml
crates/mdbx-core/src/: lib.rs  tiga.rs  types.rs
crates/mdbx-core/src/model/: attachment.rs  collection.rs  commit.rs  entry.rs  mod.rs  object_metadata.rs  payload_migration.rs  project.rs  unlock.rs
crates/mdbx-core/src/tiga/: policy.rs
crates/mdbx-crypto/: Cargo.toml
crates/mdbx-crypto/src/: aead.rs  error.rs  integrity.rs  kdf.rs  keyring.rs  lib.rs
crates/mdbx-crypto/test-vectors/: README.md  crypto-v1.json
crates/mdbx-crypto/tests/: crypto_vectors.rs
crates/mdbx-ffi/: Cargo.toml  README.md  README.zh-CN.md  uniffi.toml
crates/mdbx-ffi/src/: attachment_facade.rs  capability_facade.rs  conflict_facade.rs  extension_facade.rs  history_facade.rs  integrity_root_facade.rs  lib.rs  lifecycle_facade.rs  object_facade.rs  security_facade.rs  sync_facade.rs  tests.rs  vault_facade.rs  write_facade.rs
crates/mdbx-ffi/tests/: ffi_smoke.rs
crates/mdbx-storage/: Cargo.toml
crates/mdbx-storage/src/: backup.rs  benchmark.rs  blob_lifecycle.rs  blob_replica.rs  blob_store.rs  blob_sync_adapter.rs  blob_transfer.rs  capability.rs  commit_integrity.rs  conflict.rs  crypto_layer.rs  error.rs  init.rs  integrity_root.rs  key_epoch.rs  lib.rs  migration.rs  object_disclosure.rs  object_metadata_disclosure.rs  recovery.rs  rollback_anchor.rs  search.rs  sync_apply.rs  sync_delta.rs  sync_state.rs  tiga.rs  tiga_policy.rs  unlock.rs  vault_content_manifest.rs  vault_header_integrity.rs
crates/mdbx-storage/src/connection/: mod.rs
crates/mdbx-storage/src/import/: kdbx.rs  kdbx_binary.rs  kdbx_export.rs  kdbx_model.rs  mod.rs
crates/mdbx-storage/src/repo/: attachment.rs  branch.rs  collection_profile.rs  commit_ctx.rs  commit_history.rs  commit_inventory.rs  conflict.rs  entry.rs  mod.rs  object_label.rs  object_metadata_summary.rs  object_relation.rs  object_summary.rs  object_version.rs  payload_migration.rs  project.rs  snapshot.rs  snapshot_integrity.rs  sync_delta_inventory.rs  tombstone.rs
crates/mdbx-storage/src/schema/: mod.rs  v1.rs  v10.rs  v11.rs  v12.rs  v13.rs  v14.rs  v15.rs  v16.rs  v2.rs  v7.rs  v8.rs  v9.rs
crates/mdbx-storage/src/sync_apply/: api.rs  attachment.rs  commit_graph.rs  commit_ingest.rs  entry.rs  generic_metadata.rs  key_epoch.rs  lifecycle.rs  object_merge.rs  payload.rs  project.rs  state.rs  tiga.rs
crates/mdbx-storage/test-data/: mdbx1-draft-golden.manifest.json  mdbx1-draft-golden.mdbx  mdbx1-release-1.0.manifest.json  mdbx1-release-1.0.mdbx
crates/mdbx-storage/tests/fixtures/: README.md  kdbx3-demopass.kdbx.b64
crates/mdbx-sync/: Cargo.toml
crates/mdbx-sync/src/: bundle.rs  capability.rs  error.rs  lib.rs  message.rs  protocol.rs  wire.rs
docs/: 00-agent-rules.md  00-agent-rules.zh-CN.md  01-product-spec.md  01-product-spec.zh-CN.md  02-storage-sync-spec.md  02-storage-sync-spec.zh-CN.md  03-security-spec.md  03-security-spec.zh-CN.md  04-roadmap-acceptance.md  04-roadmap-acceptance.zh-CN.md  05-rfc-structure.zh-CN.md  06-sqlite-schema-v1.zh-CN.md  07-low-end-model-task-breakdown.zh-CN.md  08-implementation-completion-plan.zh-CN.md  09-mdbx2-compatibility.md  09-mdbx2-compatibility.zh-CN.md  11-monica-pass-cli-development.zh-CN.md  README.md  README.zh-CN.md  benchmark-report.md
docs/adr/: 0001-generic-object-compatibility-layer.md  0002-bounded-binary-kdbx-adapter.md  0002-capability-profiles.md  0003-generic-metadata-conflict-resolution.md  0004-tombstone-health-diagnostics.md  0005-causal-tombstone-purge-gate.md  0006-permanent-purge-receipts.md  0007-pre-migration-integrity-gate.md  0008-bounded-sync-bundle-v3.md  0009-streaming-encrypted-attachment-io.md  0010-bounded-and-verified-attachment-transfer.md  0011-tiga-attachment-plaintext-boundary.md  0012-paginated-object-summaries.md  0013-encrypted-external-blob-provider.md  0014-bounded-blob-audit-and-garbage-collection.md  0015-resumable-encrypted-blob-transfer.md  0015-versioned-collection-profiles.md  0016-bounded-adapter-payload-migrations.md  0017-bounded-sync-state-payloads.md  0018-bounded-generic-write-operations.md  0019-stable-bounded-commit-inventory.md  0020-transactional-state-delta-batches.md  0021-bounded-blob-replica-plans.md  0022-incremental-integrity-root.md  0023-build-capability-discovery.md  0024-policy-before-plaintext-object-disclosure.md  0025-bounded-generic-metadata-summaries.md  0026-multi-scope-generic-metadata-disclosure.md
docs/android/: README.md  README.zh-CN.md
docs/delivery/: 07-low-end-model-task-breakdown.zh-CN.md  08-implementation-completion-plan.zh-CN.md
docs/governance/: 00-agent-rules.zh-CN.md  05-rfc-structure.zh-CN.md
docs/integration/: 11-monica-pass-cli-development.zh-CN.md
docs/product/: 01-product-spec.md  01-product-spec.zh-CN.md
docs/storage/: 02-storage-sync-spec.md  02-storage-sync-spec.zh-CN.md
scripts/: generate-csharp-bindings.ps1
