[package]
name = "mdbx-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "mdbx"
path = "src/main.rs"

[dependencies]
mdbx-core = { path = "../mdbx-core" }
mdbx-storage = { path = "../mdbx-storage" }
mdbx-sync = { path = "../mdbx-sync" }
clap = { version = "4", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
rpassword = "=7.4.0"
sha2 = { workspace = true }
uuid = { workspace = true }
rusqlite = { version = "0.31", features = ["bundled"] }
