[package]
name = "mdbx-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
argon2 = { workspace = true }
chacha20poly1305 = { workspace = true }
hkdf = { workspace = true }
rand = { workspace = true }
