[package]
name = "mdbx-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "mdbx_ffi"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
mdbx-core = { path = "../mdbx-core" }
mdbx-storage = { path = "../mdbx-storage", default-features = false, features = ["core"] }
mdbx-sync = { path = "../mdbx-sync", default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
uniffi = "0.31.1"
uuid = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { workspace = true }
