[package]
name = "mdbx-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mdbx-core = { path = "../mdbx-core" }
mdbx-crypto = { path = "../mdbx-crypto" }
mdbx-sync = { path = "../mdbx-sync" }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
unicode-normalization = { workspace = true }
zeroize = { workspace = true }
