[package]
name = "mdbx-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = [
    "kdbx-import",
    "kdbx-export",
    "benchmarks",
    "derived-search-index",
    "filesystem-blob-store",
]
core = []
filesystem-blob-store = []
kdbx-import = []
kdbx-export = []
derived-search-index = []
benchmarks = ["derived-search-index"]

[dependencies]
mdbx-core = { path = "../mdbx-core" }
mdbx-crypto = { path = "../mdbx-crypto" }
mdbx-sync = { path = "../mdbx-sync", default-features = false }
rusqlite = { version = "0.31", features = ["backup", "bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
unicode-normalization = { workspace = true }
zeroize = { workspace = true }
tempfile = "3"
